--- a/infobook_backend/src/main/resources/application.properties
+++ b/infobook_backend/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/infobook_db
 spring.datasource.username=root
 spring.datasource.password=test
 spring.jpa.hibernate.ddl-auto=update
+
+##SSL Configuration
+#server.port=8080
+#server.ssl.key-alias=selfsigned_localhost_sslserver
+#server.ssl.key-password=changeit
+#server.ssl.key-store=classpath:new-ssl-server.jks
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-type=JKS
