added user module and jwt auth

--- a/infobook_backend/src/main/resources/application.properties
+++ b/infobook_backend/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.username=root
 spring.datasource.password=test
 spring.jpa.hibernate.ddl-auto=update
 
+jwt.algorithm.key=vedviev-bebbew-kjewbvfuwvlewvev-dewfwvfbny
+jwt.issuer=serius
+jwt.expiry.duration=86400000
+
 ##SSL Configuration
 #server.port=8080
 #server.ssl.key-alias=selfsigned_localhost_sslserver
